--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 							<div class="services__item">
 								<div class="services__block">
 									<div class="services__row">
-										<img src="img/Img.png" alt="">
+										<img src="img/img.png" alt="">
 									</div>
 									<div class="item__text">
 										<div class="services__text">Photography</div>
@@ -154,7 +154,7 @@
 								</div>	
 								<div class="services__block">
 									<div class="services__row">
-										<img src="img/Img2.png" alt="">
+										<img src="img/img2.png" alt="">
 									</div>
 									<div class="item__text">
 										<div class="services__text">Web Design</div>
@@ -164,7 +164,7 @@
 
 								<div class="services__block">
 									<div class="services__row">
-										<img src="img/Img-3.png" alt="">
+										<img src="img/img-3.png" alt="">
 									</div>
 									<div class="item__text">
 										<div class="services__text">Creativity</div>
@@ -178,7 +178,7 @@
 							<div class="services__item">
 								<div class="services__block">
 									<div class="services__row">
-										<img src="img/Img-4.png" alt="">
+										<img src="img/img-4.png" alt="">
 									</div>
 									<div class="item__text">
 										<div class="services__text">seo</div>
@@ -187,7 +187,7 @@
 								</div>	
 								<div class="services__block">
 									<div class="services__row">
-										<img src="img/Img-5.png" alt="">
+										<img src="img/img-5.png" alt="">
 									</div>
 									<div class="item__text">
 										<div class="services__text">Css/Html</div>
