--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 							<div class="services__item">
 								<div class="services__block">
 									<div class="services__row">
-										<img src="img/img.png" alt="">
+										<img src="img/Img.png" alt="">
 									</div>
 									<div class="item__text">
 										<div class="services__text">Photography</div>
@@ -197,7 +197,7 @@
 
 								<div class="services__block">
 									<div class="services__row">
-										<img src="img/Img-6.png" alt="">
+										<img src="img/img-6.png" alt="">
 									</div>
 									<div class="item__text">
 										<div class="services__text">digital</div>
